# internal/api/gen/http/openapi3.json
@@ -3531,18 +3531,6 @@
       "get": {
         "description": "Obtain access to the /monitor SSE event stream",
         "operationId": "ingest#monitor",
-        "parameters": [
-          {
-            "allowEmptyValue": true,
-            "example": "abc123",
-            "in": "cookie",
-            "name": "enduro-ingest-sse-ticket",
-            "schema": {
-              "example": "abc123",
-              "type": "string"
-            }
-          }
-        ],
         "responses": {
           "200": {
             "content": {
@@ -3612,69 +3600,12 @@
             "description": "internal_error: Internal Server Error response."
           }
         },
-        "security": [],
-        "summary": "monitor ingest",
-        "tags": [
-          "ingest"
-        ]
-      },
-      "post": {
-        "description": "Request access to the /monitor SSE event stream",
-        "operationId": "ingest#monitor_request",
-        "responses": {
-          "200": {
-            "description": "OK response.",
-            "headers": {
-              "Set-Cookie": {
-                "example": "abc123",
-                "schema": {
-                  "example": "abc123",
-                  "type": "string"
-                }
-              }
-            }
-          },
-          "401": {
-            "content": {
-              "application/json": {
-                "example": "abc123",
-                "schema": {
-                  "example": "abc123",
-                  "type": "string"
-                }
-              }
-            },
-            "description": "unauthorized: Unauthorized response."
-          },
-          "403": {
-            "content": {
-              "application/json": {
-                "example": "abc123",
-                "schema": {
-                  "example": "abc123",
-                  "type": "string"
-                }
-              }
-            },
-            "description": "forbidden: Forbidden response."
-          },
-          "500": {
-            "content": {
-              "application/vnd.goa.error": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            },
-            "description": "internal_error: Internal Server Error response."
-          }
-        },
         "security": [
           {
             "bearer_header_Authorization": []
           }
         ],
-        "summary": "monitor_request ingest",
+        "summary": "monitor ingest",
         "tags": [
           "ingest"
         ],
@@ -7302,18 +7233,6 @@
       "get": {
         "description": "Obtain access to the /monitor SSE event stream",
         "operationId": "storage#monitor",
-        "parameters": [
-          {
-            "allowEmptyValue": true,
-            "example": "abc123",
-            "in": "cookie",
-            "name": "enduro-storage-sse-ticket",
-            "schema": {
-              "example": "abc123",
-              "type": "string"
-            }
-          }
-        ],
         "responses": {
           "200": {
             "content": {
@@ -7383,69 +7302,12 @@
             "description": "internal_error: Internal Server Error response."
           }
         },
-        "security": [],
-        "summary": "monitor storage",
-        "tags": [
-          "storage"
-        ]
-      },
-      "post": {
-        "description": "Request access to the /monitor SSE event stream",
-        "operationId": "storage#monitor_request",
-        "responses": {
-          "200": {
-            "description": "OK response.",
-            "headers": {
-              "Set-Cookie": {
-                "example": "abc123",
-                "schema": {
-                  "example": "abc123",
-                  "type": "string"
-                }
-              }
-            }
-          },
-          "401": {
-            "content": {
-              "application/json": {
-                "example": "abc123",
-                "schema": {
-                  "example": "abc123",
-                  "type": "string"
-                }
-              }
-            },
-            "description": "unauthorized: Unauthorized response."
-          },
-          "403": {
-            "content": {
-              "application/json": {
-                "example": "abc123",
-                "schema": {
-                  "example": "abc123",
-                  "type": "string"
-                }
-              }
-            },
-            "description": "forbidden: Forbidden response."
-          },
-          "500": {
-            "content": {
-              "application/vnd.goa.error": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            },
-            "description": "internal_error: Internal Server Error response."
-          }
-        },
         "security": [
           {
             "bearer_header_Authorization": []
           }
         ],
-        "summary": "monitor_request storage",
+        "summary": "monitor storage",
         "tags": [
           "storage"
         ],
