# internal/api/gen/http/storage/server/server.go
@@ -24,7 +24,6 @@ import (
 // Server lists the storage service endpoint HTTP handlers.
 type Server struct {
 	Mounts                   []*MountPoint
-	MonitorRequest           http.Handler
 	Monitor                  http.Handler
 	ListAips                 http.Handler
 	CreateAip                http.Handler
@@ -75,7 +74,6 @@ func New(
 ) *Server {
 	return &Server{
 		Mounts: []*MountPoint{
-			{"MonitorRequest", "POST", "/storage/monitor"},
 			{"Monitor", "GET", "/storage/monitor"},
 			{"ListAips", "GET", "/storage/aips"},
 			{"CreateAip", "POST", "/storage/aips"},
@@ -112,7 +110,6 @@ func New(
 			{"CORS", "OPTIONS", "/storage/locations/{uuid}"},
 			{"CORS", "OPTIONS", "/storage/locations/{uuid}/aips"},
 		},
-		MonitorRequest:           NewMonitorRequestHandler(e.MonitorRequest, mux, decoder, encoder, errhandler, formatter),
 		Monitor:                  NewMonitorHandler(e.Monitor, mux, decoder, encoder, errhandler, formatter),
 		ListAips:                 NewListAipsHandler(e.ListAips, mux, decoder, encoder, errhandler, formatter),
 		CreateAip:                NewCreateAipHandler(e.CreateAip, mux, decoder, encoder, errhandler, formatter),
@@ -142,7 +139,6 @@ func (s *Server) Service() string { return "storage" }
 
 // Use wraps the server handlers with the given middleware.
 func (s *Server) Use(m func(http.Handler) http.Handler) {
-	s.MonitorRequest = m(s.MonitorRequest)
 	s.Monitor = m(s.Monitor)
 	s.ListAips = m(s.ListAips)
 	s.CreateAip = m(s.CreateAip)
@@ -171,7 +167,6 @@ func (s *Server) MethodNames() []string { return storage.MethodNames[:] }
 
 // Mount configures the mux to serve the storage endpoints.
 func Mount(mux goahttp.Muxer, h *Server) {
-	MountMonitorRequestHandler(mux, h.MonitorRequest)
 	MountMonitorHandler(mux, h.Monitor)
 	MountListAipsHandler(mux, h.ListAips)
 	MountCreateAipHandler(mux, h.CreateAip)
@@ -198,59 +193,6 @@ func Mount(mux goahttp.Muxer, h *Server) {
 // Mount configures the mux to serve the storage endpoints.
 func (s *Server) Mount(mux goahttp.Muxer) {
 	Mount(mux, s)
-}
-
-// MountMonitorRequestHandler configures the mux to serve the "storage" service
-// "monitor_request" endpoint.
-func MountMonitorRequestHandler(mux goahttp.Muxer, h http.Handler) {
-	f, ok := HandleStorageOrigin(h).(http.HandlerFunc)
-	if !ok {
-		f = func(w http.ResponseWriter, r *http.Request) {
-			h.ServeHTTP(w, r)
-		}
-	}
-	mux.Handle("POST", "/storage/monitor", f)
-}
-
-// NewMonitorRequestHandler creates a HTTP handler which loads the HTTP request
-// and calls the "storage" service "monitor_request" endpoint.
-func NewMonitorRequestHandler(
-	endpoint goa.Endpoint,
-	mux goahttp.Muxer,
-	decoder func(*http.Request) goahttp.Decoder,
-	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
-	errhandler func(context.Context, http.ResponseWriter, error),
-	formatter func(ctx context.Context, err error) goahttp.Statuser,
-) http.Handler {
-	var (
-		decodeRequest  = DecodeMonitorRequestRequest(mux, decoder)
-		encodeResponse = EncodeMonitorRequestResponse(encoder)
-		encodeError    = EncodeMonitorRequestError(encoder, formatter)
-	)
-	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
-		ctx = context.WithValue(ctx, goa.MethodKey, "monitor_request")
-		ctx = context.WithValue(ctx, goa.ServiceKey, "storage")
-		payload, err := decodeRequest(r)
-		if err != nil {
-			if err := encodeError(ctx, w, err); err != nil && errhandler != nil {
-				errhandler(ctx, w, err)
-			}
-			return
-		}
-		res, err := endpoint(ctx, payload)
-		if err != nil {
-			if err := encodeError(ctx, w, err); err != nil && errhandler != nil {
-				errhandler(ctx, w, err)
-			}
-			return
-		}
-		if err := encodeResponse(ctx, w, res); err != nil {
-			if errhandler != nil {
-				errhandler(ctx, w, err)
-			}
-		}
-	})
 }
 
 // MountMonitorHandler configures the mux to serve the "storage" service
