# internal/api/gen/http/storage/server/types.go
@@ -165,24 +165,6 @@ type ShowLocationResponseBody struct {
 // "list_location_aips" endpoint HTTP response body.
 type AIPResponseCollection []*AIPResponse
 
-// MonitorRequestInternalErrorResponseBody is the type of the "storage" service
-// "monitor_request" endpoint HTTP response body for the "internal_error" error.
-type MonitorRequestInternalErrorResponseBody struct {
-	// Name is the name of this class of errors.
-	Name string `form:"name" json:"name" xml:"name"`
-	// ID is a unique identifier for this particular occurrence of the problem.
-	ID string `form:"id" json:"id" xml:"id"`
-	// Message is a human-readable explanation specific to this occurrence of the
-	// problem.
-	Message string `form:"message" json:"message" xml:"message"`
-	// Is the error temporary?
-	Temporary bool `form:"temporary" json:"temporary" xml:"temporary"`
-	// Is the error a timeout?
-	Timeout bool `form:"timeout" json:"timeout" xml:"timeout"`
-	// Is the error a server-side fault?
-	Fault bool `form:"fault" json:"fault" xml:"fault"`
-}
-
 // MonitorInternalErrorResponseBody is the type of the "storage" service
 // "monitor" endpoint HTTP response body for the "internal_error" error.
 type MonitorInternalErrorResponseBody struct {
@@ -2160,20 +2142,6 @@ func NewAIPResponseCollection(res storageviews.AIPCollectionView) AIPResponseCol
 	return body
 }
 
-// NewMonitorRequestInternalErrorResponseBody builds the HTTP response body
-// from the result of the "monitor_request" endpoint of the "storage" service.
-func NewMonitorRequestInternalErrorResponseBody(res *goa.ServiceError) *MonitorRequestInternalErrorResponseBody {
-	body := &MonitorRequestInternalErrorResponseBody{
-		Name:      res.Name,
-		ID:        res.ID,
-		Message:   res.Message,
-		Temporary: res.Temporary,
-		Timeout:   res.Timeout,
-		Fault:     res.Fault,
-	}
-	return body
-}
-
 // NewMonitorInternalErrorResponseBody builds the HTTP response body from the
 // result of the "monitor" endpoint of the "storage" service.
 func NewMonitorInternalErrorResponseBody(res *goa.ServiceError) *MonitorInternalErrorResponseBody {
@@ -2718,19 +2686,10 @@ func NewListLocationAipsNotFoundResponseBody(res *storage.LocationNotFound) *Lis
 	return body
 }
 
-// NewMonitorRequestPayload builds a storage service monitor_request endpoint
-// payload.
-func NewMonitorRequestPayload(token *string) *storage.MonitorRequestPayload {
-	v := &storage.MonitorRequestPayload{}
-	v.Token = token
-
-	return v
-}
-
 // NewMonitorPayload builds a storage service monitor endpoint payload.
-func NewMonitorPayload(ticket *string) *storage.MonitorPayload {
+func NewMonitorPayload(token *string) *storage.MonitorPayload {
 	v := &storage.MonitorPayload{}
-	v.Ticket = ticket
+	v.Token = token
 
 	return v
 }
